--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "library"
   ],
   "author": "Will Lamason <williamlamason@gmail.com>",
-  "license": "Apache License 2.0",
+  "license": "Apache-2.0",
   "dependencies": {},
   "devDependencies": {
     "jest": "^26.4.2"
