--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "opendota.js",
   "version": "2.0.2",
   "description": "A NodeJS OpenDota API wrapper.",
-  "main": "index.js",
+  "main": "index.d.js",
   "types": "./types/index.ts",
   "scripts": {
     "test": "jest",
